--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/familyrentalservice
 ?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=potato
+spring.datasource.password=CubanPirate515
 # = Hibernateddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 # = Show log for each sql query
